Fix: Nav Direction on Mobile Changed to Col

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ list-style: none;
 background-color: #F4F6F5;
 width: 80%;
 display: flex;
+flex-direction: column;
 justify-content: space-around;
 padding-left: 0;
 margin: 0 auto;
@@ -118,6 +119,21 @@ justify-content: space-around;
 
 
 @media only screen and (min-width: 600px) {
+  .header {
+    list-style: none;
+    background-color: #F4F6F5;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    padding-left: 0;
+    margin: 0 auto;
+    padding: 3%;
+    margin-top: 2%;
+    margin-bottom: 5%;
+    /* box-shadow: 15px 10px 15px #C6D2CB; */
+    border-radius: 5px;
+    }
+
 .Adrienne {
   border-radius: 50%;
   width: 30%;
